# CMake-Glfw-OpenGL-Template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  REFACTORING.md
lib/: CMakeLists.txt  cgltf.c
shaders/: main.frag  main.vert
src/Project/: Application.cpp  CMakeLists.txt  Main.cpp  Mesh.cpp  Model.cpp  ProjectApplication.cpp  Shader.cpp
src/Project.Library/: Application.cpp  CMakeLists.txt
src/Project.Library/include/Project.Library/: Application.hpp
src/Project.Library/lib/: CMakeLists.txt
src/Project/include/Project/: Mesh.hpp  Model.hpp  ProjectApplication.hpp  Shader.hpp
